feat: Design and fixes, readme update m.m.
